[NOID] fix compile error